# frida-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-gate.yml
src/fuzzmind_frida_mcp/: __init__.py  __main__.py  server.py
src/fuzzmind_frida_mcp/scripts/: xpc_intercept.js
src/fuzzmind_frida_mcp/tools/: __init__.py  _core.py
src/fuzzmind_frida_mcp/tools/data/: __init__.py  database.py  files.py  network.py
src/fuzzmind_frida_mcp/tools/instrumentation/: __init__.py  cloak.py  hooks.py  interceptor.py  kernel.py  memory.py  misc.py  profiler.py  stalker.py
src/fuzzmind_frida_mcp/tools/lifecycle/: __init__.py  device.py  process.py  script.py  session.py
src/fuzzmind_frida_mcp/tools/official/: __init__.py  bus.py  common.py  compiler.py  device.py  gumjs.py  portal.py  runtime.py  script.py  service.py  session.py
src/fuzzmind_frida_mcp/tools/platform/: __init__.py  android.py  ios.py  linux.py  windows.py
src/fuzzmind_frida_mcp/tools/recipes/: __init__.py  security.py  workflow.py
src/fuzzmind_frida_mcp/tools/runtimes/: __init__.py  java.py  objc.py  swift.py
src/fuzzmind_frida_mcp/toolsets/: __init__.py  _helpers.py  data.py  instrumentation.py  lifecycle.py  platform.py  recipes.py  runtimes.py
tests/: conftest.py  test_all_toolsets.py  test_android_emulator_integration.py  test_core.py  test_docker_vm_integration.py  test_imports.py  test_ios_simulator_permission.py  test_lifecycle.py  test_official_and_workflow.py  test_real_frida_integration.py
